Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  padding: 3rem;
+  padding: 0;
   background: #0b2433;
 }
 
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: 3rem auto;
   background: #f5f5f5;
   border-radius: 10px;
   min-width: 250px;
